[package]
name = "pi-cmri-proxy"
version = "0.1.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sciguy16/pi-cmri-proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
rppal = "0.11"
hex = "0.4"